--- a/docker/python/Dockerfile
+++ b/docker/python/Dockerfile
@@ -1,6 +1,6 @@
 # Dockerfile for the grape-nf python image
 #
-FROM       grapenf/base
+FROM grapenf/base
 
 LABEL author.name="Emilio Palumbo"
 LABEL author.email="emiliopalumbo@gmail.com"
@@ -12,5 +12,6 @@ RUN apk add --no-cache --virtual=.build-dependencies build-base \
                                              zlib-dev \
                                              bzip2-dev \
                                              xz-dev && \
-    pip --no-cache-dir install cython numpy pysam && \
+    pip --no-cache-dir install cython numpy && \
+    pip --no-cache-dir install pysam && \
     apk del .build-dependencies
