--- a/docker/tool/gemtools/Dockerfile
+++ b/docker/tool/gemtools/Dockerfile
@@ -1,22 +1,18 @@
 # Dockerfile for GEMtools
 #
-FROM ubuntu:16.04 AS builder
+FROM grapenf/python
 
-ARG GEMTOOLS_VER=1.7.1
+ENV _GEMTOOLS_VERSION 1.7.1
 
-ENV _GEMTOOLS_VERSION ${GEMTOOLS_VER}
+ENV PATH /usr/lib/python2.7/site-packages/gem/gembinaries/:${PATH}
 
-RUN apt-get update && apt-get install -y --no-install-recommends \
-        wget \
-        build-essential \
-        zlib1g-dev \
-        libbz2-dev \
-        curl \
-        python \
-        python-pip \
+RUN apk add --no-cache --virtual=.build-dependencies \
+        build-base \
         python-dev \
-        ca-certificates && \
-    pip --no-cache-dir install cython==0.18 
+        zlib-dev \
+        bzip2-dev \
+        xz-dev && \
+    pip --no-cache-dir install argparse cython==0.18
 
 RUN mkdir -p build/gemtools && \
     curl -L https://api.github.com/repos/gemtools/gemtools/tarball/v${_GEMTOOLS_VERSION} \
@@ -25,12 +21,8 @@ RUN mkdir -p build/gemtools && \
     sed -i 's/http/https/g' build/gemtools/distribute_setup.py && \
     sed -i "s/\['z', 'bz2', 'gemtools'\]/\['gemtools', 'z', 'bz2'\]/" build/gemtools/setup.py && \
     sed -i 's/en_US.UTF-8/C/g' build/gemtools/python/gem/reports.py && \
-    cd build/gemtools &&\
-    python distribute_setup.py && \
-    make dist
+    cd build/gemtools && python setup.py install
 
-FROM grapenf/python
-
-ENV PATH /opt/gemtools/bin:/opt/gentools/lib/python2.7/site-packages/gem/gembinaries/:${PATH}
-
-COPY --from=builder /build/gemtools/dist/gemtools*i3 /opt/gemtools
+RUN apk del .build-dependencies && \
+    # pip uninstall -y numpy && \
+    rm -rf /build
