--- a/docker/tool/bamstats/Dockerfile
+++ b/docker/tool/bamstats/Dockerfile
@@ -1,6 +1,7 @@
 # Dockerfile for bamstats
 #
-FROM grapenf/base
+ARG ALPINE_VER=3.11
+FROM golang:alpine${ALPINE_VER} AS builder
 
 ARG BAMSTATS_VER=0.3.4
 
@@ -9,5 +10,16 @@ LABEL author.email="emiliopalumbo@gmail.com"
 
 ENV _BAMSTATS_VERSION ${BAMSTATS_VER}
 
-RUN curl -fsSL https://github.com/guigolab/bamstats/releases/download/v$_BAMSTATS_VERSION/bamstats-v$_BAMSTATS_VERSION-linux-amd64.tar.bz2 \
-    | tar xj --strip-components 3 -C /usr/local/bin
+RUN apk update && \
+    apk --no-cache add git
+
+RUN GO111MODULE=on go get \
+    -ldflags "-X github.com/guigolab/bamstats.PreVersionString=" \
+    github.com/guigolab/bamstats/cmd/bamstats@v${_BAMSTATS_VERSION}
+
+FROM grapenf/base
+
+LABEL author.name="Emilio Palumbo"
+LABEL author.email="emiliopalumbo@gmail.com"
+
+COPY --from=builder /go/bin/bamstats /usr/local/bin/
