--- a/docker/tool/bedtools/Dockerfile
+++ b/docker/tool/bedtools/Dockerfile
@@ -1,23 +1,25 @@
 # Dockerfile for BEDtools
 #
-FROM ubuntu:16.04 AS builder
+ARG ALPINE_VER=3.11
+FROM alpine:${ALPINE_VER} AS builder
 
 ARG BEDTOOLS_VER=2.19.1
 
 ENV _BEDTOOLS_VERSION ${BEDTOOLS_VER}
 
-RUN apt-get update && apt-get install -y --no-install-recommends \
-    build-essential \
-    zlib1g-dev \
+RUN apk update && apk --no-cache add \
+    build-base \
+    zlib-dev \
     curl \
     python \
-    ca-certificates
+    bash
 
 RUN mkdir -p build/bedtools && \
     curl -L https://api.github.com/repos/arq5x/bedtools2/tarball/v$_BEDTOOLS_VERSION \
     | tar xzf - --strip-components=1 -C build/bedtools
 
-RUN cd build/bedtools && make
+RUN sed -i '111s/const/constexpr/' build/bedtools/src/utils/fileType/FileRecordTypeChecker.h && \
+    cd build/bedtools && make
 
 FROM grapenf/base
 
