--- a/docker/tool/sambamba/Dockerfile.compile
+++ b/docker/tool/sambamba/Dockerfile.compile
@@ -9,9 +9,10 @@ RUN apt-get update && \
                                                git \
                                                llvm \
                                                python3 \
+                                               libxml2 \
                                                zlib1g-dev
 
-ARG LDC_VERSION=1.11.0
+ARG LDC_VERSION=1.21.0
 
 RUN curl -fsSL "https://github.com/ldc-developers/ldc/releases/download/v${LDC_VERSION}/ldc2-${LDC_VERSION}-linux-x86_64.tar.xz" \
     | tar xJ && \
@@ -22,7 +23,7 @@ ENV \
     LD_LIBRARY_PATH="/ldc/lib:/usr/lib:/lib:${LD_LIBRARY_PATH}" \
     LIBRARY_PATH="/ldc/lib:/usr/lib:/lib:${LD_LIBRARY_PATH}"
 
-ARG REVISION=v0.7.0
+ARG REVISION=v0.7.1
 
 RUN git clone --recursive https://github.com/biod/sambamba.git && \
     cd sambamba && git checkout $REVISION && \
@@ -33,4 +34,4 @@ FROM grapenf/base
 LABEL author.name="Emilio Palumbo"
 LABEL author.email="emiliopalumbo@gmail.com"
 
-COPY --from=builder /sambamba/bin/sambamba /usr/local/bin
+COPY --from=builder /sambamba/bin/sambamba-0.7.1 /usr/local/bin/sambamba
