First trial at publishDir

--- a/nextflow.config
+++ b/nextflow.config
@@ -6,6 +6,7 @@ params {
         index = "$baseDir/test-index.txt"
         genome = "$baseDir/data/genome.fa"
         annotation = "$baseDir/data/annotation.gtf"
+        outDir = "results"
 }
 
 // Docker is disabled by default and uses the following options when activated
@@ -25,7 +26,7 @@ trace.enabled = true
 
 // Pipeline profiles
 profiles {
-    
+
     // default profile - same as starrsem with sambamba sorting
     standard {
         params.mappingSortTool = "sambamba"
@@ -154,7 +155,7 @@ profiles {
         // Computing resources
         includeConfig "$baseDir/config/resources/ihec.config"
     }
-    
+
     // Encode 3 profile with STAR and RSEM updated versions and STAR gene counts
     encode3 {
         params.mappingSortTool = "sambamba"
