--- a/nextflow.config
+++ b/nextflow.config
@@ -25,7 +25,7 @@ trace.enabled = true
 
 // Pipeline profiles
 profiles {
-    
+
     // default profile - same as starrsem with sambamba sorting
     standard {
         params.mappingSortTool = "sambamba"
@@ -154,9 +154,9 @@ profiles {
         // Computing resources
         includeConfig "$baseDir/config/resources/ihec.config"
     }
-    
+
     // Encode 3 profile with STAR and RSEM updated versions and STAR gene counts
-    encode3 {
+    entex {
         params.mappingSortTool = "sambamba"
 
         params.fastaIndexTool = "samtools"
@@ -169,8 +169,8 @@ profiles {
         params.contigTool = "RGCRG"
         params.quantificationTool = "RSEM"
 
-        params.mappingToolVersion = '2.5.1b'
-        params.bigwigToolVersion = '2.5.1b'
+        params.mappingToolVersion = '2.6.0c'
+        params.bigwigToolVersion = '2.6.0c'
         params.quantificationToolVersion = '1.2.23'
 
         includeConfig "config/container/docker-multi.config"
