Add dev branch to Pipeline CI workflow

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,9 +2,12 @@ name: Pipeline CI
 
 on:
   push:
-    branches: [ master ]
+    branches:
+    - master
+    - dev
   pull_request:
-    branches: [ master ]
+    branches:
+    - master
 
 jobs:
   build:
