--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -25,13 +25,14 @@ jobs:
             - ihec
 
     env:
+      NXF_DEFAULT_DSL: 1
       CI_PROFILE: ${{ matrix.profile }}
 
     steps:
     - uses: actions/checkout@v2
-    - name: Set up JDK 1.8
+    - name: Set up Java
       uses: actions/setup-java@v1
       with:
-        java-version: 1.8
+        java-version: 1.16
     - name: Run pipeline
       run: . .circ && ci test
