adding kallisto changes from branch dsl2_kallisto on top of latest version of dsl2 branch

--- a/config/container/docker-multi.config
+++ b/config/container/docker-multi.config
@@ -54,4 +54,20 @@ process {
         container = "grapenf/quantification:${params.quantificationTool.toLowerCase()}-${params.quantificationToolVersion}"
     }
 
+    withName: 'kallisto_chrom_length' {
+        container = "kallisto:latest"
+    }
+
+    withName: 'kallisto_prep_gtf' {
+        container = "kallisto:latest"
+    }
+
+    withName: 'kallisto_index' {
+        container = "kallisto_index:latest"
+    }
+
+    withName: 'kallisto_quantification' {
+        container = "kallisto_index:latest"
+    }
+
 }
