--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -35,4 +35,6 @@ jobs:
       with:
         java-version: 1.16
     - name: Run pipeline
+      env:
+        NXF_DEFAULT_DSL: 1
       run: . .circ && ci test
