--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -29,11 +29,14 @@ jobs:
       CI_PROFILE: ${{ matrix.profile }}
 
     steps:
-    - uses: actions/checkout@v2
+    - uses: actions/checkout@v3
     - name: Set up Java
-      uses: actions/setup-java@v1
+      uses: actions/setup-java@v3
       with:
-        java-version: 1.16
+        distribution: zulu
+        java-version: 16
+        java-package: jre
+
     - name: Run pipeline
       env:
         NXF_VER: 22.10.8
