Update trace file path in main config

--- a/nextflow.config
+++ b/nextflow.config
@@ -1,3 +1,6 @@
+// utility imports
+import nextflow.trace.TraceFileObserver
+
 // main script name
 manifest.mainScript = 'grape-pipeline.nf'
 
@@ -21,7 +24,10 @@ singularity {
 }
 
 // Enable trace by default
-trace.enabled = true
+trace {
+    enabled = true
+    file = "${launchDir}/trace/${TraceFileObserver.DEF_FILE_NAME}"
+}
 
 // Pipeline profiles
 profiles {
