Start refactoring of modules and workflow

--- a/nextflow.config
+++ b/nextflow.config
@@ -40,6 +40,7 @@ profiles {
     standard {
         params.fastaIndexTool = "samtools"
         params.mappingTool = "STAR"
+        params.sortBamTool = "sambamba"
         params.mergeBamTool = "sambamba"
         params.markdupTool = "sambamba"
         params.inferExpTool = "RSeQC"
@@ -53,6 +54,7 @@ profiles {
     starrsem {
         params.fastaIndexTool = "samtools"
         params.mappingTool = "STAR"
+        params.sortBamTool = "sambamba"
         params.mergeBamTool = "sambamba"
         params.markdupTool = "sambamba"
         params.inferExpTool = "RSeQC"
@@ -67,6 +69,7 @@ profiles {
     starflux {
         params.fastaIndexTool = "samtools"
         params.mappingTool = "STAR"
+        params.sortBamTool = "sambamba"
         params.mergeBamTool = "sambamba"
         params.markdupTool = "sambamba"
         params.inferExpTool = "RSeQC"
@@ -80,6 +83,7 @@ profiles {
     gemflux {
         params.fastaIndexTool = "samtools"
         params.mappingTool = "GEM"
+        params.sortBamTool = "sambamba"
         params.mergeBamTool = "sambamba"
         params.markdupTool = "sambamba"
         params.inferExpTool = "RSeQC"
@@ -95,6 +99,7 @@ profiles {
 
         params.fastaIndexTool = "samtools"
         params.mappingTool = "STAR"
+        params.sortBamTool = "sambamba"
         params.mergeBamTool = "sambamba"
         params.markdupTool = "sambamba"
         params.inferExpTool = "RSeQC"
@@ -110,6 +115,7 @@ profiles {
 
         params.fastaIndexTool = "samtools"
         params.mappingTool = "STAR"
+        params.sortBamTool = "sambamba"
         params.mergeBamTool = "sambamba"
         params.markdupTool = "sambamba"
         params.inferExpTool = "RSeQC"
@@ -125,6 +131,7 @@ profiles {
 
         params.fastaIndexTool = "samtools"
         params.mappingTool = "STAR"
+        params.sortBamTool = "sambamba"
         params.mergeBamTool = "sambamba"
         params.markdupTool = "sambamba"
         params.inferExpTool = "RSeQC"
@@ -154,6 +161,7 @@ profiles {
 
         params.fastaIndexTool = "samtools"
         params.mappingTool = "STAR"
+        params.sortBamTool = "sambamba"
         params.mergeBamTool = "sambamba"
         params.markdupTool = "sambamba"
         params.inferExpTool = "RSeQC"
