--- a/.circ
+++ b/.circ
@@ -151,4 +151,4 @@ CI_DIR=${CI_DIR-"$(_ci_get_script_dir $0)"}
 CI_LOG=${CI_LOG-"pipeline-ci.log"}
 CI_PROFILE=${CI_PROFILE-"starrsem"}
 CI_OUTDIR=${CI_OUTDIR-"checksum"}
-CI_RUNOPTS=("-process.errorStrategy=terminate" "-with-docker" "-ansi-log" "false")
+CI_RUNOPTS=("-process.errorStrategy=terminate" "-with-docker" "-ansi-log" "false" "--rsemCalcCI")
