Add back RSEM support for IHEC profile

--- a/nextflow.config
+++ b/nextflow.config
@@ -35,7 +35,7 @@ process {
 
 // Pipeline profiles
 profiles {
-    
+
     // default profile - same as starrsem with sambamba sorting
     standard {
         params.fastaIndexTool = "samtools"
@@ -140,6 +140,7 @@ profiles {
         params.contigTool = "RGCRG"
         params.quantificationTool = "RSEM"
 
+        params.rsemVersion = "1.2.1"
         params.container = "grapenf/ihec:latest"
 
     }
@@ -154,7 +155,7 @@ profiles {
         // Computing resources
         includeConfig "$baseDir/config/resources/ihec.config"
     }
-    
+
     // Encode 3 profile with STAR and RSEM updated versions and STAR gene counts
     encode3 {
         params.mappingSortTool = "sambamba"
