--- a/nextflow.config
+++ b/nextflow.config
@@ -175,4 +175,22 @@ profiles {
         params.rsemVersion = '1.2.23'
     }
 
+    gtex {
+        params.fastaIndexTool = "samtools"
+        params.mappingTool = "STAR"
+        params.sortBamTool = "sambamba"
+        params.mergeBamTool = "sambamba"
+        params.markdupTool = "sambamba"
+        params.inferExpTool = "RSeQC"
+        params.bamStatsTool = "bamstats"
+        params.bigwigTool = "STAR"
+        params.contigTool = "RGCRG"
+        params.quantificationTool = "RSEM"
+
+        params.starVersion = 'v2.5.3a'
+        params.rsemVersion = '1.3.0'
+
+        params.annotation = "https://storage.googleapis.com/gtex-resources/GENCODE/gencode.v26.GRCh38.genes.collapsed_only.gtf"
+        params.genome = "https://storage.googleapis.com/gtex-resources/references/Homo_sapiens_assembly38_noALT_noHLA_noDecoy_ERCC.fasta"
+    }
 }
