Add param to configure global repository for containers

--- a/nextflow.config
+++ b/nextflow.config
@@ -11,6 +11,8 @@ params {
         annotation = "$baseDir/data/annotation.gtf"
 }
 
+params.containerRepo = "public.ecr.aws/biocontainers"
+
 // Docker is disabled by default and uses the following options when activated
 docker {
     sudo = false
