--- a/nextflow.config
+++ b/nextflow.config
@@ -180,8 +180,8 @@ profiles {
     gtex {
         params.fastaIndexTool = "samtools"
         params.mappingTool = "STAR"
-        params.sortBamTool = "sambamba"
-        params.mergeBamTool = "sambamba"
+        params.sortBamTool = "samtools"
+        params.mergeBamTool = "samtools"
         params.markdupTool = "sambamba"
         params.inferExpTool = "RSeQC"
         params.bamStatsTool = "bamstats"
@@ -189,10 +189,8 @@ profiles {
         params.contigTool = "RGCRG"
         params.quantificationTool = "RSEM"
 
-        params.starVersion = 'v2.5.3a'
-        params.rsemVersion = '1.3.0'
-
-        params.annotation = "https://storage.googleapis.com/gtex-resources/GENCODE/gencode.v26.GRCh38.genes.collapsed_only.gtf"
-        params.genome = "https://storage.googleapis.com/gtex-resources/references/Homo_sapiens_assembly38_noALT_noHLA_noDecoy_ERCC.fasta"
+        params.starVersion = '2.5.3a--0'
+        params.rsemVersion = '1.3.0--pl526r341h4f16992_4'
+        params.samtoolsVersion = '1.6--hc3601fc_10'
     }
 }
