Update GitHub Actions workflow

--- a/nextflow.config
+++ b/nextflow.config
@@ -6,12 +6,12 @@ manifest.mainScript = 'grape-pipeline.nf'
 
 // small input dataset for testing
 params {
-        index = "$baseDir/test-index.txt"
-        genome = "$baseDir/data/genome.fa"
-        annotation = "$baseDir/data/annotation.gtf"
+    index = "$baseDir/test-index.txt"
+    genome = "$baseDir/data/genome.fa"
+    annotation = "$baseDir/data/annotation.gtf"
 }
 
-params.containerRepo = "public.ecr.aws/biocontainers"
+params.containerRepo = "quay.io/biocontainers"
 
 // Docker is disabled by default and uses the following options when activated
 docker {
