--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -17,8 +17,8 @@ jobs:
   pipeline-test:
     name: Pipeline tests
     runs-on: ubuntu-latest
-    needs: workflow-test
-
+    needs: [module-test, workflow-test]
+    
     strategy:
       fail-fast: false
       matrix:
@@ -50,7 +50,6 @@ jobs:
   workflow-test:
     name: Workflow tests
     runs-on: ubuntu-latest
-    needs: module-test
 
     steps:
       - uses: actions/checkout@v4
