[ci skip] Update gtex profile

--- a/nextflow.config
+++ b/nextflow.config
@@ -189,6 +189,8 @@ profiles {
         params.contigTool = "RGCRG"
         params.quantificationTool = "RSEM"
 
+	params.containerRepo = 'public.ecr.aws/biocontainers'
+
         params.starVersion = '2.5.3a--0'
         params.rsemVersion = '1.3.0--pl526r341h4f16992_4'
         params.samtoolsVersion = '1.6--hc3601fc_10'
