--- a/nextflow.config
+++ b/nextflow.config
@@ -11,7 +11,7 @@ params {
     annotation = "$baseDir/data/annotation.gtf"
 }
 
-params.containerRepo = "quay.io/biocontainers"
+params.containerRepo = "public.ecr.aws/biocontainers"
 
 // Docker is disabled by default and uses the following options when activated
 docker {
@@ -188,8 +188,6 @@ profiles {
         params.bigwigTool = "STAR"
         params.contigTool = "RGCRG"
         params.quantificationTool = "RSEM"
-
-	params.containerRepo = 'public.ecr.aws/biocontainers'
 
         params.starVersion = '2.5.3a--0'
         params.rsemVersion = '1.3.0--pl526r341h4f16992_4'
